--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
       <link rel="stylesheet" href="./css/style.css">
    </head>
    <body>
+      <div class="container">
+         <div class="load">
+            <div class="load__spinner"></div>
+             <p class="load__lettre--1 load__lettre">o</p>
+             <p class="load__lettre--2 load__lettre">h</p>
+             <p class="load__lettre--3 load__lettre">m</p>
+             <p class="load__lettre--4 load__lettre">y</p>
+             <p class="load__lettre--5 load__lettre">f</p>
+             <p class="load__lettre--6 load__lettre">o</p>
+             <p class="load__lettre--7 load__lettre">o</p>
+             <p class="load__lettre--8 load__lettre">d</p>
+         </div>
+      </div>
       <header class="header">
          <h1 class="header__titre">ohmyfood</h1>
       </header>
